index page added

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             <a href=""><h3>Sail With Boat</h3></a>
         </div>
         <div>
-            <button>login</button>
-            <button><i class="fa-solid fa-cart-plus"></i></button>
+            <a href="login.html"><i class="fa-solid fa-user"></i></a>
+            <a href="cart.html"><i class="fa-solid fa-cart-plus"></i></a>
+            
         </div>
     </div>
 
