Index file Added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
             <img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Asset_2_288x-8_5_small.png?v=1661838672" alt="">
         </a>
         <div>
-            <a href="index.html"><h3>Catergories <i class="fa-solid fa-caret-down"></i> </h3></a>
+            <div id="dropdown">
+            <button id="dropbtn">Catergories
+                <div id="dropdown-content">
+                    <a href="airdopes.html"><img src="	https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/dropdown-TWS_100x.png?v=1663752600" alt=""><br> Airdopes </a>
+                    <a href="smartwatch.html"><img src="	https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/pro_gear_100x.jpg?v=1663753638" alt=""><br> Smart Watch</a>
+                    <a href="rockerz.html"><img src="	https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/Rectangle271_100x.png?v=1663752867" alt=""><br> Rockerz</a>
+                </div>
+            </button>
+        </div>
+            
             <a href=""><h3>Sail With Boat</h3></a>
         </div>
         <div>
