--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href=""><h3>Sail With Boat</h3></a>
         </div>
         <div>
-            <a href="login.html"><i class="fa-solid fa-user"></i></a>
+            <a id="status" href=""><i class="fa-solid fa-user"></i></a>
             <a href="cart.html"><i class="fa-solid fa-cart-plus"></i></a>
             
         </div>
