--- a/airdopes.html
+++ b/airdopes.html
@@ -28,7 +28,7 @@
             <a href=""><h3>Sail With Boat</h3></a>
         </div>
         <div>
-            <a href="login.html"><i class="fa-solid fa-user"></i></a>
+            <a onclick="login_logout()" href=""><i class="fa-solid fa-user"></i></a>
             <a href="cart.html"><i class="fa-solid fa-cart-plus"></i></a>
             
         </div>
