Filnal File Updated

--- a/information.html
+++ b/information.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boat Airdopes</title>
-    <link rel="stylesheet" href="airdopes.css">
+    <title>Boat Info</title>
+    <link rel="stylesheet" href="information.css">
     <script src="https://kit.fontawesome.com/24c494a6b6.js"
     crossorigin="anonymous"></script>
 </head>
@@ -16,9 +16,9 @@
         </a>
         <div>
             <div id="dropdown">
-            <button id="dropbtn">Airedopes
+            <button id="dropbtn">Catergories
                 <div id="dropdown-content">
-                    
+                    <a href="airdopes.html"><img src="	https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/dropdown-TWS_100x.png?v=1663752600" alt=""><br> Airdopes </a>
                     <a href="smartwatch.html"><img src="	https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/pro_gear_100x.jpg?v=1663753638" alt=""><br> Smart Watch</a>
                     <a href="rockerz.html"><img src="	https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/Rectangle271_100x.png?v=1663752867" alt=""><br> Rockerz</a>
                 </div>
@@ -33,7 +33,6 @@
             <div id="count"><h6></h6></div>
         </div>
     </div>
-    <h1 id="head">boAt Airdobes</h1>
     <div id="container"></div>
     <div id="footer">
         <div>
@@ -87,4 +86,4 @@
     </div>
 </body>
 </html>
-<script src="airdopes.js"></script>
+<script src="information.js"></script>
